--- a/Back end/src/main/resources/application.properties
+++ b/Back end/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 security.oauth2.client.scope=password
 
+security.jwt.signing-key=bmV2ZXIgc3RvcCBjb2Rl
